Add a fix for ImmibisCore